# provision

./: .gitignore  Dockerfile  Dockerfile.endpoint  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml  sbapr.org  sbapr.org_archive
ansible/: deploy-sqc.yaml  teardown-sqc.yaml
ansible/inventory/: sqc.yaml
ansible/inventory/host_vars/: metacentrum.yaml
ansible/k8s/deployments/: sqc.yaml
ansible/k8s/services/: minio_main.yaml  minio_management.yaml
ansible/vaults/: sqc.yaml
common/: repo.py
endpoint/: main.py  service.py
k8s/deployments/: minio.yaml  rabbitmq.yaml
k8s/ingresses/: minio_main.yaml  minio_management.yaml
k8s/services/: rabbitmq.yaml
provision/: Containerfile
scripts/: compare.py  throughput.py
sqc/: main.py  repository.py  validation.py  worker.py
sqc/validation/: __init__.py  io.py  model.py  molprobity.py  validation.py
src/: main.py  repository.py  validation.py  worker.py
src/endpoint/: __init__.py  endpoint.proto  main.py  service.py
