[project]
name = "sqc"
version = "2023.0.0"
requires-python = ">= 3.11.6"
dependencies = [
    "kombu==5.3.4",
    "minio==7.2.0",
    "gemmi-program==0.6.5",
    "structlog>=24.1.0",
]

[tool.pdm.scripts]
main = {call = "sqc.main:main"}

[tool.pdm.dev-dependencies]
dev = [
    "kubernetes>=29.0.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
