[project]
name = "sqc"
version = "2023.0.0"
requires-python = ">= 3.11.6"
dependencies = [
    "kombu==5.3.4",
    "minio==7.2.0",
    "gemmi-program==0.6.5",
    "structlog>=24.1.0",
    "pydantic==2.6.4",
    "biopython==1.83",
    "gitpython>=3.1.42",
]

[tool.pdm.scripts]
main = {call = "sqc.main:main"}
jsonschema = {call = "sqc.validation.model:print_jsonschema"}
compare = {call = "scripts.compare:main"}

[tool.pdm.dev-dependencies]
dev = [
    "kubernetes>=29.0.0",
    "git+git@github.com:sb-ncbr/sqclib.git",
    "ansible>=9.4.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
